Docker build of presentation

--- a/content/src/Dockerfile
+++ b/content/src/Dockerfile
@@ -1,1 +1,9 @@
 FROM archlinux:latest
+
+# prepare pacman for use
+RUN pacman -Syyuu --noconfirm \
+    archlinux-keyring
+
+# now lets install something to play with (htop)
+RUN pacman -S --noconfirm \
+    htop
